--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,6 @@ LissandraFileSystem/.cproject
 LissandraFileSystem/.settings/language.settings.xml
 Pool-Memorias/.cproject
 Pool-Memorias/.settings/language.settings.xml
+Biblioteca/.settings/language.settings.xml
+Kernel/.settings/language.settings.xml
+LissandraFileSystem/.settings/language.settings.xml
